--- a/tex/references.bib
+++ b/tex/references.bib
@@ -199,3 +199,9 @@ doi = {10.1177/027836499601500602},
   year={2001},
   organization={IEEE}
 }
+@article{zhou17dubin,
+    author  = "Zhou, Jiaji and Mason, Matthew T",
+    journal = {Manuscript in submission},
+    title   = "Pushing Revisited: Differential Flatness, Trajectory Planning and Stabilization",
+    year    = "2017",
+}
